# shared-blog-system

./: .gitignore  AGENTS.md  README.md  main.py  manage.py  pyproject.toml  render.yaml
docs/: final-demo-notes.md  project-review.md  rubric-alignment.md
src/blog_app/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
src/blog_app/migrations/: 0001_initial.py
src/blog_app/static/blog_app/: styles.css
src/blog_app/templates/blog_app/: base.html  post_detail.html  post_form.html  post_list.html
src/blog_app/templates/blog_app/partials/: comment_list.html  post_results.html
src/blog_site/: settings.py  urls.py  wsgi.py
tests/: test_blog_app.py  test_models.py
