[project]
name = "shared-blog-system"
version = "0.1.0"
description = "Shared blog system project for Web Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "django-htmx>=1.28.0",
    "gunicorn>=26.0.0",
    "waitress>=3.0.0",
    "whitenoise>=6.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blog_app = [
    "templates/**/*.html",
    "static/**/*",
]

[dependency-groups]
dev = [
    "coverage>=7.6.0",
    "pytest>=8.3.0",
    "pytest-django>=4.8",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "blog_site.settings"

[tool.coverage.run]
source = ["blog_app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
